<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.wisebuy.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_all_products"
            app:destination="@id/navigation_all_products" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile2"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>

    <fragment
        android:id="@+id/navigation_all_products"
        android:name="com.example.wisebuy.view.allProducts.AllProductsFragment"
        android:label="@string/all_products"
        tools:layout="@layout/fragment_all_products" >
        <action
            android:id="@+id/action_navigation_all_products_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_all_products_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_all_products_to_navigation_cart"
            app:destination="@id/navigation_cart" />

    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.wisebuy.view.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_all_products"
            app:destination="@id/navigation_all_products" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_cart"
            app:destination="@id/navigation_cart" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home2"
            app:destination="@id/navigation_home" />
    </fragment>
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.example.wisebuy.view.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_all_products"
            app:destination="@id/navigation_all_products" />
        <action
            android:id="@+id/action_navigation_cart_to_navigation_profile"
            app:destination="@id/navigation_profile" />
        <action
            android:id="@+id/action_navigation_cart_to_navigation_all_products"
            app:destination="@id/navigation_all_products" />
        <action
            android:id="@+id/action_navigation_cart_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_cart_to_navigation_cart"
            app:destination="@id/navigation_cart" />
    </fragment>
</navigation>