<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="720dp"
    tools:context=".view.allProducts.AllProductsFragment">

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignBottom="@+id/topView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="-6dp"
            android:queryHint="Search products" />

        <LinearLayout
            android:id="@+id/topView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

                <TextView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/wisebuy"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />


        </LinearLayout>


        <GridView
            android:id="@+id/allProductsView"
            android:layout_width="match_parent"
            android:layout_height="671dp"
            android:layout_below="@+id/topView"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:numColumns="2" />
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/productDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
            android:orientation="vertical"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/titleText"
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"


                            android:fontFamily="@font/archivo_black"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <ImageView
                            android:id="@+id/wishListIcon"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            app:srcCompat="@drawable/favourite" />

                </LinearLayout>

                <com.smarteist.autoimageslider.SliderView
                    android:id="@+id/productImageSlider"
                    android:layout_width="match_parent"
                    android:layout_height="374dp"
                    android:nestedScrollingEnabled="false"
                    app:sliderAnimationDuration="600"
                    app:sliderAutoCycleDirection="back_and_forth"
                    app:sliderIndicatorAnimationDuration="600"
                    app:sliderIndicatorGravity="center_horizontal|bottom"
                    app:sliderIndicatorMargin="15dp"
                    app:sliderIndicatorOrientation="horizontal"
                    app:sliderIndicatorPadding="3dp"
                    app:sliderIndicatorRadius="2dp"
                    app:sliderIndicatorSelectedColor="#5A5A5A"
                    app:sliderIndicatorUnselectedColor="#FFF"
                    app:sliderScrollTimeInSec="1"
                    app:sliderStartAutoCycle="false" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/brandText"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/dell"
                    android:textSize="15sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/descriptionText"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:text="@string/detailed_description"
                    android:textSize="15sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/priceText"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"/>

                <Button
                    android:id="@+id/addToCartButton"
                    android:layout_width="365dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_to_cart" />

        </LinearLayout>

</ScrollView>
</RelativeLayout>